--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     working_dir: /var/www/html/
     volumes:
       - ./:/var/www/html/
+      - /var/www/html/vendor
     networks:
       - app-network
     depends_on:
