--- a/backend/composer.json
+++ b/backend/composer.json
@@ -30,7 +30,8 @@
     "php-di/php-di": "^6.4",
     "relay/relay": "^2.1",
     "vlucas/phpdotenv": "^5.2",
-    "vlucas/valitron": "^1.4"
+    "vlucas/valitron": "^1.4",
+    "friendsofphp/php-cs-fixer": "^3.2"
   },
     "require-dev": {
       "phpunit/phpunit": " ^9.5",
