--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,10 +3,7 @@ FROM php:8.1-fpm
 RUN apt-get update \
     && apt-get install -y \
     git libonig-dev libzip-dev libpq-dev build-essential \
-    && docker-php-ext-install \
-    sockets pdo pdo_pgsql zip
-
-RUN docker-php-ext-install pdo_mysql mbstring zip exif pcntl
+    && docker-php-ext-install sockets pdo pdo_pgsql zip pdo_mysql mbstring zip exif pcntl
 
 COPY . /var/www/html
 
